--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <div class="social-links">
         <a href="https://github.com/rajag0pal" class="twitter"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/raja-gopal2001416/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/raja-gopal2001416/" class="medium"><i class="bi bi-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
