--- a/index.html
+++ b/index.html
@@ -224,17 +224,6 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-blue">
-              <picture>
-                <img src="assets/img/pyhrm.png" class = "pyhrmicon">
-              </picture> 
-              <h4><a href="">PyHRM</a></h4>
-              <p>PyHRM is a Python library for processing DNA melting signals, extracting features like melting temperatures, peak points, and peak area. It offers visualization and filtering for accurate peak detection.</p>
-              <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
@@ -286,8 +275,19 @@
               <p>An AI tool that generates trending hashtags for images based on their content, using pre-trained models for captioning and hashtag generation.</p>
             </div>
           </div>
+  
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style="margin-top:22px;">
+            <div class="icon-box iconbox-blue">
+              <picture>
+                <img src="assets/img/pyhrm.png" class = "pyhrmicon">
+              </picture> 
+              <h4><a href="">PyHRM</a></h4>
+              <p>PyHRM is a Python library for processing DNA melting signals, extracting features like melting temperatures, peak points, and peak area. It offers visualization and filtering for accurate peak detection.</p>
+              <a href="pyhrm-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style="margin-top:22px;">
             <div class="icon-box iconbox-blue">
               <picture>
                 <img src="assets/img/logo_E.png" class = "extractoricon">
@@ -297,7 +297,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style="margin-top:22px;">
             <div class="icon-box iconbox-blue">
               <picture>
                 <img src="assets/img/MCI.png" class = "mciicon">
