--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
               </picture> 
               <h4><a href="">PyHRM</a></h4>
               <p>PyHRM is a Python library for processing DNA melting signals, extracting features like melting temperatures, peak points, and peak area. It offers visualization and filtering for accurate peak detection.</p>
-              <a href="pyhrm-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <br>
+              <a href="pyhrm-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bxs-rocket"></i>&nbsp;&nbsp;Learn More</a>
             </div>
           </div>
 
