--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
               </div>
               <h4><a href="">Image to hashtags</a></h4>
               <p>An AI tool that generates trending hashtags for images based on their content, using pre-trained models for captioning and hashtag generation.</p>
-            
+              <br>
+              <a href="https://huggingface.co/spaces/rajag0pal/ImagetoHashtags"><i class="bx bx-pointer"></i>&nbsp;&nbsp;Try it</a>
 
             </div>
           </div>
