--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Rajagopal S</h1>
-      <p><span class="typed" data-typed-items="Software Development Engineer, AI Engineer ,Machine Learning"></span></p>
+      <p><span class="typed" data-typed-items="AI/ML Engineer, Specialized in NLP , Specialized in Computer Vision"></span></p>
       <div class="social-links">
         <a href="https://github.com/rajag0pal" class="twitter"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/raja-gopal2001416/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
