--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Works</h2>
+          <h2>Tool I work with</h2>
         </div>
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="" class="purecounter"></span>
               <p>On-going Project</p>
             </div>
           </div>
