--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Tool I work with</h2>
+        <div class="section-title>
+          <h2>My Area of Work</h2>
         </div>
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="" class="purecounter"></span>
-              <p>On-going Project</p>
+              <i class="fab fa-python""></i>
+              <p>Python</p>
             </div>
           </div>
 
