--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="fab fa-python""></i>
+              <i class="fab fa-python"></i>
               <p>Python</p>
             </div>
           </div>
