--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
-      <div class="container" data-aos="fade-up">
+<!--       <div class="container" data-aos="fade-up">
 
         <div class="section-title>
           <h2>My Area of Work</h2>
@@ -129,7 +129,8 @@
         </div>
 
       </div>
-      
+       -->
+
     </section><!-- End Facts Section -->
 <br>
     <!-- ======= Skills Section ======= -->
