--- a/index.html
+++ b/index.html
@@ -85,8 +85,27 @@
         </div>    
       </div>
     </section><!-- End About Section -->
+
+    <!-- ======= Facts Section ======= -->
+    <section id="facts" class="facts">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2 "style="font-family: Arial, Helvetica, sans-serif;"">Tools I Work with</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8 offset-lg-1 text-center"> <!-- Adjusted column width and added offset-lg-2 -->
+            <img src="assets/img/aoi.png" alt="" style="height:160px;"> <!-- Removed display:block -->
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Facts Section -->
     
 <br>
+    
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
